<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calendar</string>
    <string name="today">Today</string>
    <string name="no_events">No events</string>
    <string name="new_event">New Event</string>
    <string name="settings">Settings</string>
    <string name="event_detail">Event Info</string>
    <string name="all_day">All-day</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title_hint">Event title</string>
    <string name="read_calendar_permission">Calendar permission is required to show your events</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="permission_denied">Permission denied. Events cannot be loaded.</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="repeat">Repeat</string>
    <string name="never">Never</string>
    <string name="reminder">Reminder</string>
    <string name="no_reminder">No Reminder</string>
    <string name="save_to">Save to</string>
    <string name="local_calendar">Local Calendar</string>
    <string name="time_zone">Time Zone</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="show_week_numbers">Show Week Numbers</string>
    <string name="start_week_on">Start Week On</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="display">Display</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="notifications">Notifications &amp; Reminders</string>
    <string name="delete_overdue">Delete All Overdue Events</string>
    <string name="account_management">Account Management</string>
</resources>
